--- a/index.html
+++ b/index.html
@@ -143,21 +143,74 @@
 // ===== Config =====
 const brandName = "DERVIESKINARE";
 const products = [
-  {code:89,  name:"Agua micelar",            price:15960},
-  {code:20,  name:"Calendula",               price:24360},
-  {code:25,  name:"celulas madres",          price:28140},
-  {code:5,   name:"Despigmentante soft",     price:26775},
-  {code:76,  name:"Emulsión de karite",      price:24360},
-  {code:131, name:"Espuma oil control",      price:21735},
-  {code:132, name:"Espuma Termal",           price:21735},
-  {code:86,  name:"Hialcrem",                price:25725},
-  {code:7,   name:"Loción termal",           price:14805},
-  {code:26,  name:"Rosa mosqueta",           price:28140},
-  {code:103, name:"Serum Niacinamida",       price:29400},
-  {code:85,  name:"Serum Vit C",             price:34650},
-  {code:75,  name:"Shock VIT A - corporal",  price:19740},
-  {code:36,  name:"Ultra hidratante Urea",   price:21735},
-  {code:24,  name:"Vitamina C shock",        price:28140},
+  {code:61,  name:"AA + finast 1 mg x60",                     price:36750},
+  {code:89,  name:"Agua micelar",                             price:15960},
+  {code:57,  name:"Aminoacidos x 60",                         price:24360},
+  {code:69,  name:"Argan",                                    price:24360},
+  {code:28,  name:"Argireline",                               price:28140},
+  {code:82,  name:"Arnica Globulos",                          price:15960},
+  {code:47,  name:"Betacarotenos",                            price:21735},
+  {code:20,  name:"Calendula",                                price:24360},
+  {code:91,  name:"Cápsulas DEPIEL",                          price:46200},
+  {code:25,  name:"celulas madres",                           price:28140},
+  {code:38,  name:"Celulitis control x 200",                  price:30450},
+  {code:98,  name:"Comprimidos Venotonicos x 60 comp",        price:23415},
+  {code:30,  name:"Contorno Activo",                          price:26775},
+  {code:100, name:"Crema Grietas y Fisuras",                  price:28140},
+  {code:37,  name:"Criogeno anticelulitis x 200",             price:30450},
+  {code:115, name:"DERMOACLARANTE",                           price:32025},
+  {code:90,  name:"Dermocalmante",                            price:24360},
+  {code:4,   name:"Despigmentante Noche",                     price:35175},
+  {code:5,   name:"Despigmentante soft",                      price:26775},
+  {code:27,  name:"DMAE",                                     price:28140},
+  {code:76,  name:"Emulsión de karite",                       price:24360},
+  {code:62,  name:"Emulsión de limpieza",                     price:17115},
+  {code:109, name:"Emulsion reductora",                       price:0},
+  {code:131, name:"Espuma oil control",                       price:21735},
+  {code:132, name:"Espuma Termal",                            price:21735},
+  {code:99,  name:"Estrias Control x 100 gr",                 price:34230},
+  {code:125, name:"FPS 50 hibrido Dervie",                    price:0},
+  {code:11,  name:"Glicolico 12%",                            price:24360},
+  {code:12,  name:"Glicolico 15%",                            price:24360},
+  {code:13,  name:"Glicolico 17%",                            price:25725},
+  {code:10,  name:"Glicolico 8%",                             price:24360},
+  {code:67,  name:"GlicoSal",                                 price:24360},
+  {code:66,  name:"GlicoSal PLUS",                            price:25725},
+  {code:86,  name:"Hialcrem",                                 price:25725},
+  {code:112, name:"Hibrido Niacinamida",                      price:26775},
+  {code:65,  name:"hidroxido de potasio",                     price:15120},
+  {code:48,  name:"Isotretinoina",                            price:25410},
+  {code:19,  name:"Lipoactiva",                               price:24360},
+  {code:21,  name:"Lipocomplex",                              price:24360},
+  {code:6,   name:"Locion Bioactiva",                         price:17115},
+  {code:7,   name:"Loción termal",                            price:14805},
+  {code:83,  name:"Mandelico + retinol crema",                price:26775},
+  {code:134, name:"Minoxidil 0,25 mg caps. x60",              price:28875},
+  {code:133, name:"Minoxidil 0,5mg caps. x 60",               price:28875},
+  {code:46,  name:"Minoxidil 5 % locion",                     price:25410},
+  {code:35,  name:"Pasta al Agua",                            price:15120},
+  {code:81,  name:"Retinol 0,5% gel seda",                    price:37485},
+  {code:3,   name:"Revitalización dérmica",                   price:30975},
+  {code:26,  name:"Rosa mosqueta",                            price:28140},
+  {code:39,  name:"Scrub Corporal",                           price:24360},
+  {code:34,  name:"Scrub Facial",                             price:19740},
+  {code:77,  name:"Sebocontrol",                              price:25410},
+  {code:29,  name:"Serum antiage de párpados",                price:37590},
+  {code:135, name:"Serum Anti-manchas",                       price:34650},
+  {code:84,  name:"Serum Glicolico",                          price:29400},
+  {code:103, name:"Serum Niacinamida",                        price:29400},
+  {code:85,  name:"Serum Vit C",                              price:34650},
+  {code:75,  name:"Shock VIT A - corporal",                   price:19740},
+  {code:128, name:"SOLENIL corporal factor 65",               price:29085},
+  {code:129, name:"SOLENIL facial color factor 30",           price:32760},
+  {code:130, name:"SOLENIL facial SIN color factor 60",       price:33915},
+  {code:102, name:"talonera silicona",                        price:14805},
+  {code:78,  name:"tretinoina 0,015%",                        price:35385},
+  {code:79,  name:"tretinoina 0,025%",                        price:36750},
+  {code:80,  name:"tretinoina 0,05%",                         price:37695},
+  {code:36,  name:"Ultra hidratante Urea",                    price:21735},
+  {code:50,  name:"unguento labial",                          price:21735},
+  {code:51,  name:"Vitamina E Purísima",                      price:15750},
 ];
 
 // ===== Utilidades =====
